--- a/JogoDaVelha/nbproject/project.properties
+++ b/JogoDaVelha/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=jogodavelha.JogoDaVelha
+main.class=br.com.github.rhenanrk.concorrencia.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
