--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,10 @@ hs_err_pid*
 /JogoDaVelha/build/
 
 # NetBeans specific
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
+nbproject/*
+build/*
+nbbuild/*
+dist/*
+nbdist/*
 nbactions.xml
 nb-configuration.xml
