--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,14 @@ hs_err_pid*
 /JogoDaVelha/build/
 
 # NetBeans specific
-nbproject/*
-nbproject
-classes
-build/*
-nbbuild/*
-dist/*
-nbdist/*
-nbactions.xml
-nb-configuration.xml
+project-root-directory/
++ build/
++ dist/
++ nbproject/
+  build-impl.xml
+  + private/
+  + project.properties
+  + project.xml
++ src/
++ test/
++ build.xml
