--- a/.gitignore
+++ b/.gitignore
@@ -24,15 +24,21 @@ hs_err_pid*
 /JogoDaVelha/nbproject/private/
 /JogoDaVelha/build/
 
-# NetBeans specific
-project-root-directory/
-+ build/
-+ dist/
-+ nbproject/
-  build-impl.xml
-  + private/
-  + project.properties
-  + project.xml
-+ src/
-+ test/
-+ build.xml
+
+down vote
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
