--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-
-# NetBeans specific #
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/nbactions.xml
-/nb-configuration.xml
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+nbactions.xml
 
 # Class Files #
 *.class
